# sqliteman-qt5

./: .gitignore  CMakeLists.txt  Makefile  README  VERSION
sqliteman/: CMakeLists.txt  Makefile  altertabledialog.cpp  cmake_install.cmake  createindexdialog.cpp  dataviewer.cpp  main.cpp  moc_altertabledialog.cpp_parameters  moc_altertriggerdialog.cpp_parameters  moc_alterviewdialog.cpp_parameters  moc_analyzedialog.cpp_parameters  moc_blobpreviewwidget.cpp_parameters  moc_constraintsdialog.cpp_parameters  moc_createindexdialog.cpp_parameters  moc_createtabledialog.cpp_parameters  moc_createtriggerdialog.cpp_parameters  moc_createviewdialog.cpp_parameters  moc_dataexportdialog.cpp_parameters  moc_dataviewer.cpp_parameters  moc_helpbrowser.cpp_parameters  moc_importtabledialog.cpp_parameters  moc_importtablelogdialog.cpp_parameters  moc_litemanwindow.cpp_parameters  moc_multieditdialog.cpp_parameters  moc_populatorcolumnwidget.cpp_parameters  moc_populatordialog.cpp_parameters  moc_preferences.cpp_parameters  moc_preferencesdialog.cpp_parameters  moc_queryeditordialog.cpp_parameters  moc_schemabrowser.cpp_parameters  moc_shortcuteditordialog.cpp_parameters  moc_shortcutmodel.cpp_parameters  moc_sqldelegate.cpp_parameters  moc_sqleditor.cpp_parameters  moc_sqleditorwidget.cpp_parameters  moc_sqlitemview.cpp_parameters  moc_sqliteprocess.cpp_parameters  moc_sqlmodels.cpp_parameters  moc_tableeditordialog.cpp_parameters  moc_tabletree.cpp_parameters  (+8 more)
sqliteman/.ccls-cache/@@home@sachetto@sqliteman-1.2.2@sqliteman/: @usr@include@alloca.h.blob  @usr@include@c++@10@algorithm.blob  @usr@include@c++@10@array.blob  @usr@include@c++@10@backward@auto_ptr.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@algorithmfwd.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocated_ptr.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@atomic_base.h.blob  @usr@include@c++@10@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  @usr@include@c++@10@bits@functexcept.h.blob  @usr@include@c++@10@bits@functional_hash.h.blob  @usr@include@c++@10@bits@hash_bytes.h.blob  @usr@include@c++@10@bits@invoke.h.blob  @usr@include@c++@10@bits@iterator_concepts.h.blob  @usr@include@c++@10@bits@list.tcc.blob  @usr@include@c++@10@bits@memoryfwd.h.blob  @usr@include@c++@10@bits@move.h.blob  @usr@include@c++@10@bits@nested_exception.h.blob  @usr@include@c++@10@bits@postypes.h.blob  @usr@include@c++@10@bits@predefined_ops.h.blob  @usr@include@c++@10@bits@ptr_traits.h.blob  @usr@include@c++@10@bits@range_access.h.blob  @usr@include@c++@10@bits@range_cmp.h.blob  @usr@include@c++@10@bits@ranges_uninitialized.h.blob  @usr@include@c++@10@bits@refwrap.h.blob  @usr@include@c++@10@bits@shared_ptr.h.blob  @usr@include@c++@10@bits@shared_ptr_atomic.h.blob  @usr@include@c++@10@bits@shared_ptr_base.h.blob  @usr@include@c++@10@bits@std_abs.h.blob  @usr@include@c++@10@bits@stl_algo.h.blob  @usr@include@c++@10@bits@stl_algobase.h  @usr@include@c++@10@bits@stl_algobase.h.blob  (+115 more)
sqliteman/.ccls-cache/@home@sachetto@sqliteman-1.2.2@sqliteman/: altertabledialog.cpp.blob  altertabledialog.h.blob  altertriggerdialog.h.blob  alterviewdialog.h.blob  analyzedialog.h.blob  blobpreviewwidget.h.blob  constraintsdialog.h.blob  createindexdialog.cpp.blob  createindexdialog.h.blob  createtabledialog.h.blob  createtriggerdialog.h.blob  createviewdialog.h.blob  database.h  database.h.blob  dataexportdialog.h.blob  dataviewer.cpp  dataviewer.cpp.blob  dataviewer.h.blob  helpbrowser.h.blob  importtabledialog.h.blob  litemanwindow.cpp  litemanwindow.cpp.blob  litemanwindow.h.blob  moc_sqliteprocess.cpp  moc_sqliteprocess.cpp.blob  populatordialog.h.blob  populatorstructs.h.blob  preferences.cpp  preferences.cpp.blob  preferences.h.blob  preferencesdialog.cpp.blob  preferencesdialog.h.blob  queryeditordialog.h.blob  schemabrowser.h.blob  shortcuteditordialog.h.blob  shortcutmodel.cpp.blob  shortcutmodel.h.blob  sqldelegate.h.blob  sqleditor.cpp.blob  sqleditor.h.blob  (+94 more)
sqliteman/doc/: Makefile  cmake_install.cmake
sqliteman/doc/en/: Makefile  cmake_install.cmake
sqliteman/icons/: Makefile  cmake_install.cmake
sqliteman/sqlparser/: tosqlparse.cpp
sqliteman/ts/: Makefile  cmake_install.cmake  sqliteman_it.ts
